Address modernization violations
Upgraded modernizer is flagging Lists.newArrayList() use. Replace them
with plain List.of().

Also ditch use of javax.xml.bind.DatatypeConverter() in favor of
HexFormat.

Change-Id: I1c760009fc94ce2bf8b783ed1005dae0334a9a02
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>